// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.v0;

import "google/protobuf/wrappers.proto";

message TraceContext {
  // https://www.w3.org/TR/trace-context/
  google.protobuf.StringValue traceparent = 1;
  google.protobuf.StringValue tracestate = 2;
}
